# Altium-Push-to-DigiKey

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  digikey_auth_cli.py  digikey_oauth.py  digikey_push.py  pyproject.toml
.github/workflows/: ci.yml
altium/: README.md  push-bom-to-digikey-probe.pas  push-bom-to-digikey.PrjScr  push-bom-to-digikey.pas  push-bom-to-digikey.ps1
examples/: example-bom.csv  example-bom.json
tests/: test_digikey_auth_cli.py  test_digikey_oauth.py  test_digikey_push.py  test_push_authenticated.py
